feat: add photo

--- a/template/account.html
+++ b/template/account.html
@@ -10,10 +10,9 @@
   <header>
     <nav class="navbar">
       <a href="index.html" class="navbar-brand">
-        <img src="..\docs\images\testlogo.png" alt="Logo" />
+        <img src="../docs/images/testlogo.png" alt="Logo" />
         Accessibility Hub
       </a>
-      
       <ul class="navbar-nav">
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="onderzoeken.html" class="nav-link">Onderzoeken</a></li>
@@ -21,12 +20,10 @@
       </ul>
     </nav>
   </header>
-
   <main>
     <h1>Account</h1>
     <p>Hier kan informatie over het account of gebruikersinstellingen komen.</p>
   </main>
-
   <footer>
     <p>&copy; 2025 Accessibility Hub</p>
   </footer>
