added back button and changed button css

--- a/template/login_choice.html
+++ b/template/login_choice.html
@@ -20,6 +20,7 @@
             <a href="#" class="btn btn-admin">Login as Admin</a>
             <a href="#" class="btn btn-organization">Login as Organization</a>
         </div>
+        <button onclick="location.href='{{ url_for('home') }}'" class="btn">Back</button>
     </section>
     <script>
         function showLoginForm(userType) {
