--- a/template/register.html
+++ b/template/register.html
@@ -35,6 +35,7 @@
             <input type="email" name="email_toezichthouder" placeholder="Supervisor Email">
             <input type="text" name="telefoon_toezichthouder" placeholder="Supervisor Phone">
             <button type="submit" class="btn">Register</button>
+            <button onclick="location.href='{{ url_for('home') }}'" class="btn">Back</button>
         </form>
     </section>
 </body>
