added admin template

--- a/template/user/home.html
+++ b/template/user/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="index.html" class="navbar-brand">
+            <a href="user/user_index.html" class="navbar-brand">
                 <img src="{{ url_for('static', filename='images/testlogo.png') }}" alt="Logo" />
             </a>
         </nav>
