--- a/template/user/account.html
+++ b/template/user/account.html
@@ -1,22 +1,23 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Accessibility Hub - Account</title>
-  <link rel="stylesheet" href="../static/style.css" />
+  <link rel="stylesheet" href="../../static/style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <a href="index.html" class="navbar-brand">
+      <a href="user/user_index.html" class="navbar-brand">
         <img src="../docs/images/testlogo.png" alt="Logo" />
         Accessibility Hub
       </a>
       <ul class="navbar-nav">
-        <li><a href="index.html" class="nav-link">Home</a></li>
-        <li><a href="onderzoeken.html" class="nav-link">Onderzoeken</a></li>
-        <li><a href="account.html" class="nav-link" aria-current="page">Account</a></li>
+        <li><a href="user/user_index.html" class="nav-link">Home</a></li>
+        <li><a href="user/onderzoeken.html" class="nav-link">Onderzoeken</a></li>
+        <li><a href="user/account.html" class="nav-link" aria-current="page">Account</a></li>
       </ul>
     </nav>
   </header>
