--- a/template/user/onderzoeken.html
+++ b/template/user/onderzoeken.html
@@ -1,27 +1,28 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Accessibility Hub - Onderzoeken</title>
-  <link rel="stylesheet" href="../static/style.css" />
+  <link rel="stylesheet" href="../../static/style.css" />
 </head>
 <body>
   <header>
     <nav class="navbar">
-      <a href="index.html" class="navbar-brand">
-        <img src="../docs/images/testlogo.png" alt="Logo" />
+      <a href="user/user_index.html" class="navbar-brand">
+        <img src="../../docs/images/testlogo.png" alt="Logo" />
         Accessibility Hub
       </a>
       <ul class="navbar-nav">
-        <li><a href="index.html" class="nav-link">Home</a></li>
-        <li><a href="onderzoeken.html" class="nav-link" aria-current="page">Onderzoeken</a></li>
-        <li><a href="account.html" class="nav-link">Account</a></li>
+        <li><a href="user/user_index.html" class="nav-link">Home</a></li>
+        <li><a href="user/onderzoeken.html" class="nav-link" aria-current="page">Onderzoeken</a></li>
+        <li><a href="user/account.html" class="nav-link">Account</a></li>
       </ul>
     </nav>
   </header>
   <section class="hero hero-small">
-    <img src="../docs/images/onderzoek.jpg" alt="Een diverse groep mensen" class="hero-image">
+    <img src="../../docs/images/onderzoek.jpg" alt="Een diverse groep mensen" class="hero-image">
     <div class="hero-overlay hero-overlay-small">
       <h1>Onderzoeken</h1>
       <p>Bekijk hier lopende en nieuwe onderzoeken</p>
@@ -72,6 +73,6 @@
   <footer>
     <p>&copy; 2025 Accessibility Hub</p>
   </footer>
-  <script src="../static/nieuwOnderzoek.js"></script>
+  <script src="../../static/js/nieuwOnderzoek.js"></script>
 </body>
 </html>
