--- a/template/user/user_index.html
+++ b/template/user/user_index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="nl">
 <head>
@@ -9,20 +10,16 @@
 <body>
   <header>
     <nav class="navbar">
-      <a href="index.html" class="navbar-brand">
+      <a href="user/user_index.html" class="navbar-brand">
         <img src="{{ url_for('static', filename='images/testlogo.png') }}" alt="Logo" />
       </a>
       <ul class="navbar-nav">
-        <li><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
-        <li><a href="onderzoeken.html" class="nav-link">Onderzoeken</a></li>
-        <li><a href="account.html" class="nav-link">Account</a></li>
+        <li><a href="user/user_index.html" class="nav-link" aria-current="page">Home</a></li>
+        <li><a href="user/onderzoeken.html" class="nav-link">Onderzoeken</a></li>
+        <li><a href="user/account.html" class="nav-link">Account</a></li>
       </ul>
         <div class="dropdown">
-          <button class="dropbtn">{% if user_type == 'organization' %}
-            <h1>Organization User</h1>
-          {% elif user_type == 'admin' %}
-            <h1>Admin User</h1>
-          {% endif %}</button>
+          <button class="dropbtn">{{ session_name }}</button>
           <div class="dropdown-content">
             <a href="{{ url_for('logout') }}">Logout</a>
           </div>
@@ -35,7 +32,7 @@
     <div class="hero-overlay">
       <h1>Welkom bij de Accessibility Hub</h1>
       <p>Een plek waar inclusiviteit en toegankelijkheid samenkomen.</p>
-      <a href="onderzoeken.html" class="cta-button">Bekijk Onderzoeken</a>
+      <a href="user/onderzoeken.html" class="cta-button">Bekijk Onderzoeken</a>
     </div>
   </section>
   <main class="container">
@@ -77,7 +74,7 @@
         Of ben je ervaringsdeskundige en wil je jouw ervaring delen? 
         Sluit je aan bij de Accessibility Hub.
       </p>
-      <a href="onderzoeken.html" class="cta-button">Start nu</a>
+      <a href="user/onderzoeken.html" class="cta-button">Start nu</a>
     </section>
   </main>
   <footer>
