--- a/static/style.css
+++ b/static/style.css
@@ -450,6 +450,7 @@ footer {
 .dropdown {
   position: relative;
   display: inline-block;
+  margin-left: auto; 
 }
 
 .dropbtn {
@@ -464,14 +465,31 @@ footer {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: white;
+  right: 0; 
+  background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #04293A; 
+  color: white; 
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #064663; /* This is slightly lighter than the navbar color for hover effect */
 }
 
 .popup {
