--- a/template/user/account.html
+++ b/template/user/account.html
@@ -1,26 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="nl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Accessibility Hub - Account</title>
-  <link rel="stylesheet" href="../../static/style.css" />
-</head>
+{% include 'user/header.html' %}
 <body>
-  <header>
-    <nav class="navbar">
-      <a href="user/user_index.html" class="navbar-brand">
-        <img src="../docs/images/testlogo.png" alt="Logo" />
-        Accessibility Hub
-      </a>
-      <ul class="navbar-nav">
-        <li><a href="user/user_index.html" class="nav-link">Home</a></li>
-        <li><a href="user/onderzoeken.html" class="nav-link">Onderzoeken</a></li>
-        <li><a href="user/account.html" class="nav-link" aria-current="page">Account</a></li>
-      </ul>
-    </nav>
-  </header>
+  {% include 'user/navbar.html' %}
   <main>
     <h1>Account</h1>
     <p>Hier kan informatie over het account of gebruikersinstellingen komen.</p>
