--- a/template/user/home.html
+++ b/template/user/home.html
@@ -1,12 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-</head>
+{% include 'user/header.html' %}
 <body>
     <header>
         <nav class="navbar">
