--- a/template/user/user_index.html
+++ b/template/user/user_index.html
@@ -1,32 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="nl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Accessibility Hub - Home</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
-</head>
+{% include 'user/header.html' %}
 <body>
-  <header>
-    <nav class="navbar">
-      <a href="user/user_index.html" class="navbar-brand">
-        <img src="{{ url_for('static', filename='images/testlogo.png') }}" alt="Logo" />
-      </a>
-      <ul class="navbar-nav">
-        <li><a href="user/user_index.html" class="nav-link" aria-current="page">Home</a></li>
-        <li><a href="user/onderzoeken.html" class="nav-link">Onderzoeken</a></li>
-        <li><a href="user/account.html" class="nav-link">Account</a></li>
-      </ul>
-        <div class="dropdown">
-          <button class="dropbtn">{{ session_name }}</button>
-          <div class="dropdown-content">
-            <a href="{{ url_for('logout') }}">Logout</a>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </header>
+  {% include 'user/navbar.html' %}
   <section class="hero">
     <img src="{{ url_for('static', filename='images/header.jpg') }}" alt="Een diverse groep mensen die samenwerken aan toegankelijke oplossingen" class="hero-image">
     <div class="hero-overlay">
