--- a/static/style.css
+++ b/static/style.css
@@ -337,7 +337,6 @@ footer {
   display: block;
 }
 
-/* Register Form Styles */
 .register-form {
   max-width: 600px;
   margin: 2rem auto;
@@ -353,28 +352,51 @@ footer {
 }
 
 .register-form input,
-.register-form textarea {
+.register-form textarea,
+.register-form select {
   width: 100%;
   padding: 0.5rem;
   margin: 0.5rem 0;
   border: 1px solid #ccc;
   border-radius: 4px;
+  font-size: 16px;
 }
 
-.register-form textarea {
-  resize: vertical;
-}
-
-.register-form label {
-  display: block;
+.register-form .checkbox-label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin: 0.5rem 0;
+  font-size: 14px;
 }
 
-.register-form button {
-  width: 100%;
-  padding: 0.75rem;
-  margin-top: 1rem;
+.register-form .checkbox-label span {
+  flex-grow: 1;
 }
+
+.register-form input[type="checkbox"] {
+  width: auto;
+  margin-left: 10px;
+}
+
+.register-form .btn {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 1rem;
+  background-color: #04293A;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.register-form .btn:hover {
+  background-color: #064663;
+}
+
+
+
 
 /* Login Choice Styles */
 .login-choice {
@@ -555,4 +577,54 @@ footer {
 
 .popup-content button:hover {
   background-color: #064663;
+}
+.search-and-filter {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.search-form {
+    display: flex;
+    margin-right: 1rem;
+}
+
+.search-form input {
+    margin-right: 0.5rem;
+}
+
+.filter-dropdown {
+    margin-right: 0.5rem;
+}
+#clearFilters {
+    margin-left: 5px;
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    border-radius: 0.2rem;
+}
+
+@media (max-width: 768px) {
+    .search-and-filter {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .search-form, .filter-dropdown {
+        margin-bottom: 0.5rem;
+    }
+}
+.dataTables_filter form {
+  display: flex;
+  align-items: center;
+}
+
+.dataTables_filter input,
+.dataTables_filter select,
+.dataTables_filter button {
+  margin-right: 10px;
+}
+
+.dataTables_filter input {
+  width: 200px;
 }
